apps/rancher-ui/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rancher-ui
    chart: rancher-2.12.1
    heritage: Helm
    release: rancher-ui
  name: rancher-ui
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https-internal
      port: 443
      protocol: TCP
      targetPort: 444
  selector:
    app: rancher-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rancher-ui
    chart: rancher-2.12.1
    heritage: Helm
    release: rancher-ui
  name: rancher-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rancher-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rancher-ui
        release: rancher-ui
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: NotIn
                    values:
                      - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rancher-ui
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - --no-cacerts
            - --http-listen-port=80
            - --https-listen-port=443
            - --add-local=true
          image: docker.io/rancher/rancher:v2.12.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
          name: rancher
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 6666
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts: null
      priorityClassName: rancher-critical
      serviceAccountName: rancher-ui
      tolerations:
        - effect: NoSchedule
          key: cattle.io/os
          operator: Equal
          value: linux
      volumes: null
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: rancher-ui
    chart: rancher-2.12.1
    heritage: Helm
    release: rancher-ui
  name: rancher-ui
spec:
  ingressClassName: nginx
  rules:
    - host: rancher.k8s.ad-its.local
      http:
        paths:
          - backend:
              service:
                name: rancher-ui
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
